diff: fix whitespace for toolbar buttons

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -585,9 +585,9 @@
     /// Operations -> New flag.
     &.clear-search-input { c: 0 0 t }
     /// Notes -> Actions.
-    &-sm, &-group-sm > .btn {
-      padding: 7px 10px i;
-      font-size: 15px i;
+    &&-sm, &-group-sm > .btn {
+      padding: 7px 10px;
+      font-size: 15px;
     }
     /// Notes -> Reactions.
     &.award-control {
@@ -2903,7 +2903,7 @@
         a { color: unset }
         .btn {
           font-size: inherit;
-          padding: 2px 10px;
+          padding: 2px 10px i;
           c: cm 0 0 0;
         }
         // Diff -> Renamed file names. #43
